
[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probots"
version = "0.0.1"
description = "Python module for Project Robots"
authors = [
    {name = "Jason Miller", email = "jason@thoughtparameters.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "click>=8.0",
    "cryptography>=3.4",
    "pydantic>=1.8",
    "pytz>=2024.2",
    "requests>=2.28"
]

[project.scripts]
robots-cli = "probots.cli:main"

[tool.setuptools]
packages = ["probots", "probots.security", "probots.pki"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"probots" = ["security/*"]

[tool.sphinx]
project = "probots"
author = "Jason Miller"
version = "0.0.1"
language = "en"
html_theme = "sphinx-rtd-theme"

[tool.sphinx.autodoc]
automodule = true
autoclass = true
autofunction = true

[tool.sphinx.coverage]
coverage = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"

[options]
zip_safe = false
include_package_data = true

