
[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probots"
version = "0.0.1"
description = "Python module for Project Robots"
authors = [
    {name = "Jason Miller", email = "jason@thoughtparameters.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "cryptography>=3.4",
    "pytz>=2024.2",
]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=4.1.0",
    "pytest-pylint>=0.21.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "pylint>=3.3.1",
    "pylint-pytest>=1.1.8",
    "pylint-actions>=0.5.0",
    "sphinx>=6.2.1",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=1.2.0",
    "twine>=4.0.2",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "codecov>=2.1.12"
]

[project.scripts]

[tool.setuptools]
packages = ["probots", "probots.security"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"probots" = ["security/*"]

[tool.sphinx]
project = "probots"
author = "Jason Miller"
version = "0.0.1"
language = "en"
html_theme = "sphinx-rtd-theme"

[tool.sphinx.autodoc]
automodule = true
autoclass = true
autofunction = true

[tool.sphinx.coverage]
coverage = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"

[options]
zip_safe = false
include_package_data = true

[tool.pylint]
disable = ["C0114", "C0115", "C0116"]
max-line-length = 88

