
[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probots"
version = "0.0.2"
description = "Python module for Project Robots"
authors = [
    {name = "Jason Miller", email = "jason@thoughtparameters.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "cryptography>=3.4",
    "pytz>=2024.2",
]

[project.scripts]

[tool.setuptools]
packages = ["probots", "probots.security"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"probots" = ["security/*"]

[tool.sphinx]
project = "probots"
author = "Jason Miller"
version = "0.0.1"
language = "en"
html_theme = "sphinx-rtd-theme"

[tool.sphinx.autodoc]
automodule = true
autoclass = true
autofunction = true

[tool.sphinx.coverage]
coverage = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"

[options]
zip_safe = false
include_package_data = true

[tool.pylint]
max-line-length = 88

[tool.pylint.main]
load-plugins = ["pylint_actions"]

[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv", "build", "dist", ".vscode", ".github", ".pytest_cache", ".git"]
targets = ["src"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*/test_*.py"]

[tool.bandit.blacklist_imports]
bad_import = ["pickle", "subprocess"]

[tool.bandit.blacklist_calls]
bad_calls = ["subprocess.*", "eval"]


